Assignment2/LambdaNat/grammar/ParLambdaNat.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParLambdaNat.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListExp -> ListExp                         (1)
	%start_pExp1 -> Exp1                               (2)
	%start_pExp2 -> Exp2                               (3)
	%start_pExp3 -> Exp3                               (4)
	%start_pExp4 -> Exp4                               (5)
	%start_pExp6 -> Exp6                               (6)
	%start_pExp9 -> Exp9                               (7)
	%start_pExp10 -> Exp10                             (8)
	%start_pExp11 -> Exp11                             (9)
	%start_pExp13 -> Exp13                             (10)
	%start_pExp15 -> Exp15                             (11)
	%start_pExp16 -> Exp16                             (12)
	%start_pExp17 -> Exp17                             (13)
	%start_pExp -> Exp                                 (14)
	%start_pExp5 -> Exp5                               (15)
	%start_pExp7 -> Exp7                               (16)
	%start_pExp8 -> Exp8                               (17)
	%start_pExp12 -> Exp12                             (18)
	%start_pExp14 -> Exp14                             (19)
	Integer -> L_integ                                 (20)
	Id -> L_Id                                         (21)
	Program -> ListExp                                 (22)
	ListExp ->                                         (23)
	ListExp -> Exp                                     (24)
	ListExp -> Exp ';;' ListExp                        (25)
	Exp1 -> '\\' Id '.' Exp                            (26)
	Exp1 -> Exp2                                       (27)
	Exp2 -> 'if' Exp '=' Exp 'then' Exp 'else' Exp     (28)
	Exp2 -> Exp3                                       (29)
	Exp3 -> 'let' Id '=' Exp 'in' Exp                  (30)
	Exp3 -> Exp4                                       (31)
	Exp4 -> 'let' 'rec' Id '=' Exp 'in' Exp            (32)
	Exp4 -> Exp5                                       (33)
	Exp6 -> 'hd' Exp                                   (34)
	Exp6 -> 'tl' Exp                                   (35)
	Exp6 -> Exp7                                       (36)
	Exp9 -> Exp10 'less_equal' Exp10                   (37)
	Exp9 -> Exp10                                      (38)
	Exp10 -> Exp10 '+' Exp11                           (39)
	Exp10 -> Exp10 '-' Exp11                           (40)
	Exp10 -> Exp11                                     (41)
	Exp11 -> Exp11 '*' Exp12                           (42)
	Exp11 -> Exp12                                     (43)
	Exp13 -> Exp13 Exp14                               (44)
	Exp13 -> Exp14                                     (45)
	Exp15 -> '#'                                       (46)
	Exp15 -> Exp16 ':' Exp15                           (47)
	Exp15 -> Exp16                                     (48)
	Exp16 -> Integer                                   (49)
	Exp16 -> Exp17                                     (50)
	Exp17 -> Id                                        (51)
	Exp17 -> '(' Exp ')'                               (52)
	Exp -> Exp1                                        (53)
	Exp5 -> Exp6                                       (54)
	Exp7 -> Exp8                                       (55)
	Exp8 -> Exp9                                       (56)
	Exp12 -> Exp13                                     (57)
	Exp14 -> Exp15                                     (58)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'#'            { PT _ (TS _ 1) }
	'('            { PT _ (TS _ 2) }
	')'            { PT _ (TS _ 3) }
	'*'            { PT _ (TS _ 4) }
	'+'            { PT _ (TS _ 5) }
	'-'            { PT _ (TS _ 6) }
	'.'            { PT _ (TS _ 7) }
	':'            { PT _ (TS _ 8) }
	';;'           { PT _ (TS _ 9) }
	'='            { PT _ (TS _ 10) }
	'\\'           { PT _ (TS _ 11) }
	'else'         { PT _ (TS _ 12) }
	'hd'           { PT _ (TS _ 13) }
	'if'           { PT _ (TS _ 14) }
	'in'           { PT _ (TS _ 15) }
	'less_equal'   { PT _ (TS _ 16) }
	'let'          { PT _ (TS _ 17) }
	'rec'          { PT _ (TS _ 18) }
	'then'         { PT _ (TS _ 19) }
	'tl'           { PT _ (TS _ 20) }
	L_integ        { PT _ (TI $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListExp rule  1
	%start_pExp1    rule  2
	%start_pExp2    rule  3
	%start_pExp3    rule  4
	%start_pExp4    rule  5
	%start_pExp6    rule  6
	%start_pExp9    rule  7
	%start_pExp10   rule  8
	%start_pExp11   rule  9
	%start_pExp13   rule  10
	%start_pExp15   rule  11
	%start_pExp16   rule  12
	%start_pExp17   rule  13
	%start_pExp     rule  14
	%start_pExp5    rule  15
	%start_pExp7    rule  16
	%start_pExp8    rule  17
	%start_pExp12   rule  18
	%start_pExp14   rule  19
	Integer         rule  20
	Id              rule  21
	Program         rule  22
	ListExp         rules 23, 24, 25
	Exp1            rules 26, 27
	Exp2            rules 28, 29
	Exp3            rules 30, 31
	Exp4            rules 32, 33
	Exp6            rules 34, 35, 36
	Exp9            rules 37, 38
	Exp10           rules 39, 40, 41
	Exp11           rules 42, 43
	Exp13           rules 44, 45
	Exp15           rules 46, 47, 48
	Exp16           rules 49, 50
	Exp17           rules 51, 52
	Exp             rule  53
	Exp5            rule  54
	Exp7            rule  55
	Exp8            rule  56
	Exp12           rule  57
	Exp14           rule  58

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'\\'           shift, and enter state 52
	'hd'           shift, and enter state 44
	'if'           shift, and enter state 53
	'let'          shift, and enter state 54
	'tl'           shift, and enter state 45
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30
	%eof           reduce using rule 23

	Integer        goto state 22
	Id             goto state 23
	Program        goto state 70
	ListExp        goto state 71
	Exp1           goto state 46
	Exp2           goto state 47
	Exp3           goto state 48
	Exp4           goto state 49
	Exp6           goto state 41
	Exp9           goto state 34
	Exp10          goto state 35
	Exp11          goto state 36
	Exp13          goto state 31
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp            goto state 69
	Exp5           goto state 51
	Exp7           goto state 43
	Exp8           goto state 40
	Exp12          goto state 38
	Exp14          goto state 33

State 1

	%start_pListExp -> . ListExp                        (rule 1)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'\\'           shift, and enter state 52
	'hd'           shift, and enter state 44
	'if'           shift, and enter state 53
	'let'          shift, and enter state 54
	'tl'           shift, and enter state 45
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30
	%eof           reduce using rule 23

	Integer        goto state 22
	Id             goto state 23
	ListExp        goto state 68
	Exp1           goto state 46
	Exp2           goto state 47
	Exp3           goto state 48
	Exp4           goto state 49
	Exp6           goto state 41
	Exp9           goto state 34
	Exp10          goto state 35
	Exp11          goto state 36
	Exp13          goto state 31
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp            goto state 69
	Exp5           goto state 51
	Exp7           goto state 43
	Exp8           goto state 40
	Exp12          goto state 38
	Exp14          goto state 33

State 2

	%start_pExp1 -> . Exp1                              (rule 2)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'\\'           shift, and enter state 52
	'hd'           shift, and enter state 44
	'if'           shift, and enter state 53
	'let'          shift, and enter state 54
	'tl'           shift, and enter state 45
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30

	Integer        goto state 22
	Id             goto state 23
	Exp1           goto state 67
	Exp2           goto state 47
	Exp3           goto state 48
	Exp4           goto state 49
	Exp6           goto state 41
	Exp9           goto state 34
	Exp10          goto state 35
	Exp11          goto state 36
	Exp13          goto state 31
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp5           goto state 51
	Exp7           goto state 43
	Exp8           goto state 40
	Exp12          goto state 38
	Exp14          goto state 33

State 3

	%start_pExp2 -> . Exp2                              (rule 3)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'hd'           shift, and enter state 44
	'if'           shift, and enter state 53
	'let'          shift, and enter state 54
	'tl'           shift, and enter state 45
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30

	Integer        goto state 22
	Id             goto state 23
	Exp2           goto state 66
	Exp3           goto state 48
	Exp4           goto state 49
	Exp6           goto state 41
	Exp9           goto state 34
	Exp10          goto state 35
	Exp11          goto state 36
	Exp13          goto state 31
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp5           goto state 51
	Exp7           goto state 43
	Exp8           goto state 40
	Exp12          goto state 38
	Exp14          goto state 33

State 4

	%start_pExp3 -> . Exp3                              (rule 4)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'hd'           shift, and enter state 44
	'let'          shift, and enter state 54
	'tl'           shift, and enter state 45
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30

	Integer        goto state 22
	Id             goto state 23
	Exp3           goto state 65
	Exp4           goto state 49
	Exp6           goto state 41
	Exp9           goto state 34
	Exp10          goto state 35
	Exp11          goto state 36
	Exp13          goto state 31
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp5           goto state 51
	Exp7           goto state 43
	Exp8           goto state 40
	Exp12          goto state 38
	Exp14          goto state 33

State 5

	%start_pExp4 -> . Exp4                              (rule 5)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'hd'           shift, and enter state 44
	'let'          shift, and enter state 64
	'tl'           shift, and enter state 45
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30

	Integer        goto state 22
	Id             goto state 23
	Exp4           goto state 63
	Exp6           goto state 41
	Exp9           goto state 34
	Exp10          goto state 35
	Exp11          goto state 36
	Exp13          goto state 31
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp5           goto state 51
	Exp7           goto state 43
	Exp8           goto state 40
	Exp12          goto state 38
	Exp14          goto state 33

State 6

	%start_pExp6 -> . Exp6                              (rule 6)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'hd'           shift, and enter state 44
	'tl'           shift, and enter state 45
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30

	Integer        goto state 22
	Id             goto state 23
	Exp6           goto state 62
	Exp9           goto state 34
	Exp10          goto state 35
	Exp11          goto state 36
	Exp13          goto state 31
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp7           goto state 43
	Exp8           goto state 40
	Exp12          goto state 38
	Exp14          goto state 33

State 7

	%start_pExp9 -> . Exp9                              (rule 7)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30

	Integer        goto state 22
	Id             goto state 23
	Exp9           goto state 61
	Exp10          goto state 35
	Exp11          goto state 36
	Exp13          goto state 31
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp12          goto state 38
	Exp14          goto state 33

State 8

	%start_pExp10 -> . Exp10                            (rule 8)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30

	Integer        goto state 22
	Id             goto state 23
	Exp10          goto state 60
	Exp11          goto state 36
	Exp13          goto state 31
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp12          goto state 38
	Exp14          goto state 33

State 9

	%start_pExp11 -> . Exp11                            (rule 9)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30

	Integer        goto state 22
	Id             goto state 23
	Exp11          goto state 59
	Exp13          goto state 31
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp12          goto state 38
	Exp14          goto state 33

State 10

	%start_pExp13 -> . Exp13                            (rule 10)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30

	Integer        goto state 22
	Id             goto state 23
	Exp13          goto state 58
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp14          goto state 33

State 11

	%start_pExp15 -> . Exp15                            (rule 11)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30

	Integer        goto state 22
	Id             goto state 23
	Exp15          goto state 57
	Exp16          goto state 25
	Exp17          goto state 26

State 12

	%start_pExp16 -> . Exp16                            (rule 12)

	'('            shift, and enter state 29
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30

	Integer        goto state 22
	Id             goto state 23
	Exp16          goto state 56
	Exp17          goto state 26

State 13

	%start_pExp17 -> . Exp17                            (rule 13)

	'('            shift, and enter state 29
	L_Id           shift, and enter state 30

	Id             goto state 23
	Exp17          goto state 55

State 14

	%start_pExp -> . Exp                                (rule 14)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'\\'           shift, and enter state 52
	'hd'           shift, and enter state 44
	'if'           shift, and enter state 53
	'let'          shift, and enter state 54
	'tl'           shift, and enter state 45
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30

	Integer        goto state 22
	Id             goto state 23
	Exp1           goto state 46
	Exp2           goto state 47
	Exp3           goto state 48
	Exp4           goto state 49
	Exp6           goto state 41
	Exp9           goto state 34
	Exp10          goto state 35
	Exp11          goto state 36
	Exp13          goto state 31
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp            goto state 50
	Exp5           goto state 51
	Exp7           goto state 43
	Exp8           goto state 40
	Exp12          goto state 38
	Exp14          goto state 33

State 15

	%start_pExp5 -> . Exp5                              (rule 15)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'hd'           shift, and enter state 44
	'tl'           shift, and enter state 45
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30

	Integer        goto state 22
	Id             goto state 23
	Exp6           goto state 41
	Exp9           goto state 34
	Exp10          goto state 35
	Exp11          goto state 36
	Exp13          goto state 31
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp5           goto state 42
	Exp7           goto state 43
	Exp8           goto state 40
	Exp12          goto state 38
	Exp14          goto state 33

State 16

	%start_pExp7 -> . Exp7                              (rule 16)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30

	Integer        goto state 22
	Id             goto state 23
	Exp9           goto state 34
	Exp10          goto state 35
	Exp11          goto state 36
	Exp13          goto state 31
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp7           goto state 39
	Exp8           goto state 40
	Exp12          goto state 38
	Exp14          goto state 33

State 17

	%start_pExp8 -> . Exp8                              (rule 17)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30

	Integer        goto state 22
	Id             goto state 23
	Exp9           goto state 34
	Exp10          goto state 35
	Exp11          goto state 36
	Exp13          goto state 31
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp8           goto state 37
	Exp12          goto state 38
	Exp14          goto state 33

State 18

	%start_pExp12 -> . Exp12                            (rule 18)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30

	Integer        goto state 22
	Id             goto state 23
	Exp13          goto state 31
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp12          goto state 32
	Exp14          goto state 33

State 19

	%start_pExp14 -> . Exp14                            (rule 19)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30

	Integer        goto state 22
	Id             goto state 23
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp14          goto state 27

State 20

	Integer -> . L_integ                                (rule 20)

	L_integ        shift, and enter state 21


State 21

	Integer -> L_integ .                                (rule 20)

	'#'            reduce using rule 20
	'('            reduce using rule 20
	')'            reduce using rule 20
	'*'            reduce using rule 20
	'+'            reduce using rule 20
	'-'            reduce using rule 20
	':'            reduce using rule 20
	';;'           reduce using rule 20
	'='            reduce using rule 20
	'else'         reduce using rule 20
	'in'           reduce using rule 20
	'less_equal'   reduce using rule 20
	'then'         reduce using rule 20
	L_integ        reduce using rule 20
	L_Id           reduce using rule 20
	%eof           reduce using rule 20


State 22

	Exp16 -> Integer .                                  (rule 49)

	'#'            reduce using rule 49
	'('            reduce using rule 49
	')'            reduce using rule 49
	'*'            reduce using rule 49
	'+'            reduce using rule 49
	'-'            reduce using rule 49
	':'            reduce using rule 49
	';;'           reduce using rule 49
	'='            reduce using rule 49
	'else'         reduce using rule 49
	'in'           reduce using rule 49
	'less_equal'   reduce using rule 49
	'then'         reduce using rule 49
	L_integ        reduce using rule 49
	L_Id           reduce using rule 49
	%eof           reduce using rule 49


State 23

	Exp17 -> Id .                                       (rule 51)

	'#'            reduce using rule 51
	'('            reduce using rule 51
	')'            reduce using rule 51
	'*'            reduce using rule 51
	'+'            reduce using rule 51
	'-'            reduce using rule 51
	':'            reduce using rule 51
	';;'           reduce using rule 51
	'='            reduce using rule 51
	'else'         reduce using rule 51
	'in'           reduce using rule 51
	'less_equal'   reduce using rule 51
	'then'         reduce using rule 51
	L_integ        reduce using rule 51
	L_Id           reduce using rule 51
	%eof           reduce using rule 51


State 24

	Exp14 -> Exp15 .                                    (rule 58)

	'#'            reduce using rule 58
	'('            reduce using rule 58
	')'            reduce using rule 58
	'*'            reduce using rule 58
	'+'            reduce using rule 58
	'-'            reduce using rule 58
	';;'           reduce using rule 58
	'='            reduce using rule 58
	'else'         reduce using rule 58
	'in'           reduce using rule 58
	'less_equal'   reduce using rule 58
	'then'         reduce using rule 58
	L_integ        reduce using rule 58
	L_Id           reduce using rule 58
	%eof           reduce using rule 58


State 25

	Exp15 -> Exp16 . ':' Exp15                          (rule 47)
	Exp15 -> Exp16 .                                    (rule 48)

	'#'            reduce using rule 48
	'('            reduce using rule 48
	')'            reduce using rule 48
	'*'            reduce using rule 48
	'+'            reduce using rule 48
	'-'            reduce using rule 48
	':'            shift, and enter state 85
	';;'           reduce using rule 48
	'='            reduce using rule 48
	'else'         reduce using rule 48
	'in'           reduce using rule 48
	'less_equal'   reduce using rule 48
	'then'         reduce using rule 48
	L_integ        reduce using rule 48
	L_Id           reduce using rule 48
	%eof           reduce using rule 48


State 26

	Exp16 -> Exp17 .                                    (rule 50)

	'#'            reduce using rule 50
	'('            reduce using rule 50
	')'            reduce using rule 50
	'*'            reduce using rule 50
	'+'            reduce using rule 50
	'-'            reduce using rule 50
	':'            reduce using rule 50
	';;'           reduce using rule 50
	'='            reduce using rule 50
	'else'         reduce using rule 50
	'in'           reduce using rule 50
	'less_equal'   reduce using rule 50
	'then'         reduce using rule 50
	L_integ        reduce using rule 50
	L_Id           reduce using rule 50
	%eof           reduce using rule 50


State 27

	%start_pExp14 -> Exp14 .                            (rule 19)

	%eof           accept


State 28

	Exp15 -> '#' .                                      (rule 46)

	'#'            reduce using rule 46
	'('            reduce using rule 46
	')'            reduce using rule 46
	'*'            reduce using rule 46
	'+'            reduce using rule 46
	'-'            reduce using rule 46
	';;'           reduce using rule 46
	'='            reduce using rule 46
	'else'         reduce using rule 46
	'in'           reduce using rule 46
	'less_equal'   reduce using rule 46
	'then'         reduce using rule 46
	L_integ        reduce using rule 46
	L_Id           reduce using rule 46
	%eof           reduce using rule 46


State 29

	Exp17 -> '(' . Exp ')'                              (rule 52)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'\\'           shift, and enter state 52
	'hd'           shift, and enter state 44
	'if'           shift, and enter state 53
	'let'          shift, and enter state 54
	'tl'           shift, and enter state 45
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30

	Integer        goto state 22
	Id             goto state 23
	Exp1           goto state 46
	Exp2           goto state 47
	Exp3           goto state 48
	Exp4           goto state 49
	Exp6           goto state 41
	Exp9           goto state 34
	Exp10          goto state 35
	Exp11          goto state 36
	Exp13          goto state 31
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp            goto state 84
	Exp5           goto state 51
	Exp7           goto state 43
	Exp8           goto state 40
	Exp12          goto state 38
	Exp14          goto state 33

State 30

	Id -> L_Id .                                        (rule 21)

	'#'            reduce using rule 21
	'('            reduce using rule 21
	')'            reduce using rule 21
	'*'            reduce using rule 21
	'+'            reduce using rule 21
	'-'            reduce using rule 21
	'.'            reduce using rule 21
	':'            reduce using rule 21
	';;'           reduce using rule 21
	'='            reduce using rule 21
	'else'         reduce using rule 21
	'in'           reduce using rule 21
	'less_equal'   reduce using rule 21
	'then'         reduce using rule 21
	L_integ        reduce using rule 21
	L_Id           reduce using rule 21
	%eof           reduce using rule 21


State 31

	Exp13 -> Exp13 . Exp14                              (rule 44)
	Exp12 -> Exp13 .                                    (rule 57)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	')'            reduce using rule 57
	'*'            reduce using rule 57
	'+'            reduce using rule 57
	'-'            reduce using rule 57
	';;'           reduce using rule 57
	'='            reduce using rule 57
	'else'         reduce using rule 57
	'in'           reduce using rule 57
	'less_equal'   reduce using rule 57
	'then'         reduce using rule 57
	L_integ        shift, and enter state 21
	L_Id           shift, and enter state 30
	%eof           reduce using rule 57

	Integer        goto state 22
	Id             goto state 23
	Exp15          goto state 24
	Exp16          goto state 25
	Exp17          goto state 26
	Exp14          goto state 77

State 32

	%start_pExp12 -> Exp12 .                            (rule 18)

	%eof           accept


State 33

	Exp13 -> Exp14 .                                    (rule 45)

	'#'            reduce using rule 45
	'('            reduce using rule 45
	')'            reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	'-'            reduce using rule 45
	';;'           reduce using rule 45
	'='            reduce using rule 45
	'else'         reduce using rule 45
	'in'           reduce using rule 45
	'less_equal'   reduce using rule 45
	'then'         reduce using rule 45
	L_integ        reduce using rule 45
	L_Id           reduce using rule 45
	%eof           reduce using rule 45


State 34

	Exp8 -> Exp9 .                                      (rule 56)

	')'            reduce using rule 56
	';;'           reduce using rule 56
	'='            reduce using rule 56
	'else'         reduce using rule 56
	'in'           reduce using rule 56
	'then'         reduce using rule 56
	%eof           reduce using rule 56


State 35

	Exp9 -> Exp10 . 'less_equal' Exp10                  (rule 37)
	Exp9 -> Exp10 .                                     (rule 38)
	Exp10 -> Exp10 . '+' Exp11                          (rule 39)
	Exp10 -> Exp10 . '-' Exp11                          (rule 40)

	')'            reduce using rule 38
	'+'            shift, and enter state 74
	'-'            shift, and enter state 75
	';;'           reduce using rule 38
	'='            reduce using rule 38
	'else'         reduce using rule 38
	'in'           reduce using rule 38
	'less_equal'   shift, and enter state 83
	'then'         reduce using rule 38
	%eof           reduce using rule 38


State 36

	Exp10 -> Exp11 .                                    (rule 41)
	Exp11 -> Exp11 . '*' Exp12                          (rule 42)

	')'            reduce using rule 41
	'*'            shift, and enter state 76
	'+'            reduce using rule 41
	'-'            reduce using rule 41
	';;'           reduce using rule 41
	'='            reduce using rule 41
	'else'         reduce using rule 41
	'in'           reduce using rule 41
	'less_equal'   reduce using rule 41
	'then'         reduce using rule 41
	%eof           reduce using rule 41


State 37

	%start_pExp8 -> Exp8 .                              (rule 17)

	%eof           accept


State 38

	Exp11 -> Exp12 .                                    (rule 43)

	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	'-'            reduce using rule 43
	';;'           reduce using rule 43
	'='            reduce using rule 43
	'else'         reduce using rule 43
	'in'           reduce using rule 43
	'less_equal'   reduce using rule 43
	'then'         reduce using rule 43
	%eof           reduce using rule 43


State 39

	%start_pExp7 -> Exp7 .                              (rule 16)

	%eof           accept


State 40

	Exp7 -> Exp8 .                                      (rule 55)

	')'            reduce using rule 55
	';;'           reduce using rule 55
	'='            reduce using rule 55
	'else'         reduce using rule 55
	'in'           reduce using rule 55
	'then'         reduce using rule 55
	%eof           reduce using rule 55


State 41

	Exp5 -> Exp6 .                                      (rule 54)

	')'            reduce using rule 54
	';;'           reduce using rule 54
	'='            reduce using rule 54
	'else'         reduce using rule 54
	'in'           reduce using rule 54
	'then'         reduce using rule 54
	%eof           reduce using rule 54


State 42

	%start_pExp5 -> Exp5 .                              (rule 15)

	%eof           accept


State 43
